# clonk_planet

./: .clang-format  .gitignore  CMakeLists.txt  Easy.c4f  Freeware.txt  Graphics.c4g  Hazard.c4d  Hazard.c4f  Joki.c4p  Knights.c4d  Knights.c4f  LICENSE.txt  LICENSE_THIRD_PARTY.txt  Maps.c4f  Material.c4g  Missions.c4f  Music.c4g  Names.txt  Objects.c4d  README.md  Sound.c4g  Splash.c4v  Tutorial.c4f  Twonky.c4p  UILANG1.UDB  UILANG2.UDB  Worlds.c4f  Worlds2.c4f  clonk.c4x  dump_mem.py  dump_ui.c  dump_ui.py  find_unpacker.py  fix_pe.py  fix_wav.py  font_impl.cpp  parse_dlg.py  read_options.py  test_font_size  test_font_size.cpp  (+5 more)
.github/workflows/: build.yml
ClonkPlanetData/: Easy.c4f  Freeware.txt  Hazard.c4d  Knights.c4f  Maps.c4f  Missions.c4f  Planet.cnt  Planet.hlp  Splash.c4v  Worlds2.c4f
dumps/: options_dump.txt
engine/: engine.dsp  engine.dsw  engine.ncb  engine.opt  license.txt  readme.txt
engine/inc/: C4Application.h  C4Command.h  C4Compiler.h  C4ComponentHost.h  C4Components.h  C4Config.h  C4Console.h  C4Constants.h  C4Control.h  C4Def.h  C4EditCursor.h  C4Effects.h  C4Engine.h  C4Facet.h  C4FacetEx.h  C4FileClasses.h  C4FogOfWar.h  C4FullScreen.h  C4Game.h  C4GameMessage.h  C4GamePadCon.h  C4GraphicsResource.h  C4GraphicsSystem.h  C4Group.h  C4IDList.h  C4Id.h  C4Include.h  C4InfoCore.h  C4InputHandler.h  C4Landscape.h  C4Log.h  C4Map.h  C4MassMover.h  C4MasterServerClient.h  C4Material.h  C4MaterialList.h  C4Menu.h  C4MessageBoard.h  C4MouseControl.h  C4MusicSystem.h  (+38 more)
engine/res/: Game.pal  engine.rc  resource.h
engine/src/: C4Action.cpp  C4Application.cpp  C4Command.cpp  C4Compiler.cpp  C4ComponentHost.cpp  C4Config.cpp  C4Console.cpp  C4Control.cpp  C4Def.cpp  C4EditCursor.cpp  C4Effect.cpp  C4Engine.cpp  C4Facet.cpp  C4FacetEx.cpp  C4FileClasses.cpp  C4FogOfWar.cpp  C4FullScreen.cpp  C4Game.cpp  C4GameMessage.cpp  C4GamePadCon.cpp  C4GraphicsResource.cpp  C4GraphicsSystem.cpp  C4Group.cpp  C4IDList.cpp  C4Id.cpp  C4InfoCore.cpp  C4InputHandler.cpp  C4Landscape.cpp  C4Log.cpp  C4Map.cpp  C4MassMover.cpp  C4MasterServerClient.cpp  C4Material.cpp  C4MaterialList.cpp  C4Menu.cpp  C4MessageBoard.cpp  C4MouseControl.cpp  C4Movement.cpp  C4MusicSystem.cpp  C4NameList.cpp  (+34 more)
frontend/: launcher.py  test_extract.py
launcher/: c4_io.py  clonk_midi.cpp  clonk_popup.py  clonk_ui.py  debug_entries.py  debug_header_raw_worlds.py  debug_loading.py  debug_no_scramble_header.py  debug_no_unscramble.py  debug_raw.py  debug_scramble_verify.py  debug_scramble_worlds.py  debug_unscramble.py  debug_ver.py  extract_gfx.py  launcher.py  test_c4_io.py  win3d.py
launcher/old/: c4_io.py  check_header.py  clonk_popup.py  clonk_ui.py  launcher.py  test_launcher_loading.py  test_launcher_loading_nested.py
launcher/res_music/: Cheer Up.mid  Frontend Old.mid  Frontend.mid  Go on Living.mid  Long Ago.mid  On a Razor-Blade.mid  Origin of Silence.mid  Party Pop.mid  Quick Charge.mid  Reflective Motion.mid  Rocking-Horse.mid  Saddy Song.mid  Sloping Off.mid  Summer Walk.mid  Tropic Fever.mid
launcher/src/: C4Group.cpp  C4Group.h  ClonkDialogs.cpp  ClonkDialogs.h  ClonkLauncher.cpp  ClonkLauncher.h  ConfigManager.cpp  ConfigManager.h  LauncherCompat.h  OptionsDialog.cpp  OptionsDialog.h  SplashWindow.h  TutorialWindow.h  Utils.cpp  Utils.h  Win3DWidgets.cpp  Win3DWidgets.h  main.cpp
masterserver/: masterserver.cpp
nonbuilddata/: extracted_text1.txt  hlp.txt  install_log_paths.txt
planet_data/: Freeware.txt  Graphics.c4g  Hazard.c4f  Joki.c4p  Knights.c4d  Material.c4g  Music.c4g  Names.txt  Objects.c4d  Sound.c4g  Tutorial.c4f  Twonky.c4p  Worlds.c4f  clonk.c4x  clonk.ini
scripts/: compare_visuals.py  create_music_videos.py  dump_dialogs.py  dump_music.py  dump_ui.c  extract_res.py  extract_single_res.py  find_layout.py  fix_style.py  fix_wavs.sh  generate_string_table.py  list_res.py  read_dialog.py  run_unpack.py  search_font.py  search_mids.py  search_mids_deep.py
standard/: Standard.dsp  Standard.dsw  Standard.opt  readme.txt
standard/inc/: Bitmap256.h  CStdFile.h  Compat.h  DInputX.h  DSoundX.h  Fixed.h  Midi.h  PathFinder.h  Standard.h  StdBitmap.h  StdConfig.h  StdDDraw.h  StdFacet.h  StdFile.h  StdFont.h  StdHTTP.h  StdJoystick.h  StdRandom.h  StdRegistry.h  StdResStr.h  StdSurface.h  StdVideo.h
standard/lib/: Standard.lib  StandardD.lib
standard/src/: Bitmap256.cpp  CStdFile.cpp  Compat.cpp  DInputX.cpp  DSoundX.cpp  LoadStringFallback.cpp  Midi.cpp  PathFinder.cpp  Standard.cpp  StdBitmap.cpp  StdConfig.cpp  StdDDraw.cpp  StdFacet.cpp  StdFile.cpp  StdFont.cpp  StdHTTP.cpp  StdJoystick.cpp  StdRegistry.cpp  StdResStr.cpp  StdSurface.cpp  StdVideo.cpp
standard/unibase/: skstream.cpp  skstream.h
standard/zlib/: ZLib.h  adler32.c  compress.c  crc32.c  deflate.c  deflate.h  gzio.c  trees.c  uncompr.c  zinternal.h  zutil.c  zutil.h
tests/: test_loading.cpp  test_zlib.cpp
todo/: todo.txt
